# jimp2

lab1/doublebasepalindromes/: DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/factorial/: Factorial.cpp  Factorial.h
lab1/multiplicationtable/: MultiplicationTable.cpp  MultiplicationTable.h  main.cpp
lab1/palindrome/: Palindrome.cpp  Palindrome.h  main.cpp
lab1/reversestring/: ReverseString.cpp  ReverseString.h  main.cpp
lab10/academiascheduler/: Scheduler.cpp  Scheduler.h  main.cpp
lab10/algotest/: Algo.cpp  Algo.h  main.cpp
lab11/: CMakeLists.txt
lab11/factorymethod/: FactoryMethod.cpp  FactoryMethod.h  main.cpp
lab11/mean/: Mean.cpp  Mean.h  main.cpp
lab11/sum/: Sum.cpp  Sum.h  main.cpp
lab12/academiasequentialgenerator/: SequentialGenerator.cpp  SequentialGenerator.h  main.cpp
lab12/academiateacherhash/: TeacherHash.cpp  TeacherHash.h
lab12/timerecorder/: TimeRecorder.cpp  TimeRecorder.h
lab12/tree/: Tree.cpp  Tree.h  main.cpp
lab12/treeiterators/: TreeIterators.cpp  TreeIterators.h  main.cpp
lab13/arabicroman/: ArabicToRoman.cpp  ArabicToRoman.h  main.cpp
lab2/array2d/: Array2d.cpp  Array2d.h  CMakeLists.txt  main.cpp
lab2/greatestproduct/: GreatestProduct.cpp  GreatestProduct.h  main.cpp
lab2/polybius/: Polybius.cpp  Polybius.h  main.cpp
lab2/simpleforwardlist/: SimpleForwardList.cpp  SimpleForwardList.h  main.cpp
lab2/xorcypherbreaker/: main.cpp  (+2 more)
lab4/: CMakeLists.txt
lab7/: CMakeLists.txt
lab8/: CMakeLists.txt
lab8/ballexception/: BallException.cpp  BallException.h  CMakeLists.txt  main.cpp
(+73 files in other folders)
